fix - Firefox - collapsed rows

--- a/themes/material/component-list/materiallist.css
+++ b/themes/material/component-list/materiallist.css
@@ -128,7 +128,7 @@ th { padding: .4em .5em; }
     display: inline-flex;
     justify-content: space-around;
     flex-direction: column;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
 }
 
